# spa

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  README.md  test_conf.txt
src/: CMakeLists.txt  config.h  config.h.in  errors.hpp  interface.cpp  interface.hpp  misc_functions.cpp  misc_functions.hpp  modular_structure.cpp  modular_structure.hpp  output_functions.cpp  output_functions.hpp  spa_algorithm.cpp  spa_algorithm.hpp  spa_main.cpp  spa_network.cpp  spa_network.hpp  subgraph.cpp  subgraph.hpp  types.hpp
src/includes/: CMakeLists.txt  bofstream.hpp  logger.cpp  logger.hpp
utilities/: average_internal_degree_data.py  count.sh  integrator.py  uniquify.cpp
